fix(SkillFeedbacks): fixes backface visibility problem on Firefox

--- a/components/sections/Skills/SkillFeedbacks/SkillFeedbacks.module.css
+++ b/components/sections/Skills/SkillFeedbacks/SkillFeedbacks.module.css
@@ -53,6 +53,10 @@
   backface-visibility: hidden;
 }
 
+.front {
+  transform: rotateY(0);
+}
+
 .back {
   transform: rotateY(180deg);
 }
